--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#1a1a1a",
-        "activityBar.background": "#1a1a1a",
+        "activityBar.activeBackground": "#007700",
+        "activityBar.background": "#007700",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
         "commandCenter.border": "#e7e7e799",
-        "editorGroup.border": "#1a1a1a",
-        "panel.border": "#1a1a1a",
-        "sash.hoverBorder": "#1a1a1a",
-        "statusBar.background": "#000000",
-        "statusBar.debuggingBackground": "#000000",
+        "editorGroup.border": "#007700",
+        "panel.border": "#007700",
+        "sash.hoverBorder": "#007700",
+        "statusBar.background": "#004400",
+        "statusBar.debuggingBackground": "#440044",
         "statusBar.debuggingForeground": "#e7e7e7",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#1a1a1a",
-        "statusBarItem.remoteBackground": "#000000",
+        "statusBarItem.hoverBackground": "#007700",
+        "statusBarItem.remoteBackground": "#004400",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#000000",
+        "titleBar.activeBackground": "#004400",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#00000099",
+        "titleBar.inactiveBackground": "#00440099",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#000000"
+    "peacock.color": "#004400"
 }
