--- a/img-optimizadas/package.json
+++ b/img-optimizadas/package.json
@@ -19,17 +19,18 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongodb": "^6.3.0",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.15",
-    "sharp": "^0.33.2",
+    "nodemon": "^2.0.22",
+    "sharp": "^0.33.4",
     "timeago.js": "^4.0.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97"
