--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#2d007e",
-        "activityBar.background": "#2d007e",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "commandCenter.border": "#e7e7e799",
-        "editorGroup.border": "#2d007e",
-        "panel.border": "#2d007e",
-        "sash.hoverBorder": "#2d007e",
-        "statusBar.background": "#1b004b",
-        "statusBar.debuggingBackground": "#304b00",
+        "activityBar.activeBackground": "#6ec071",
+        "activityBar.background": "#6ec071",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "commandCenter.border": "#15202b99",
+        "editorGroup.border": "#6ec071",
+        "panel.border": "#6ec071",
+        "sash.hoverBorder": "#6ec071",
+        "statusBar.background": "#4caf50",
+        "statusBar.debuggingBackground": "#af4cab",
         "statusBar.debuggingForeground": "#e7e7e7",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#2d007e",
-        "statusBarItem.remoteBackground": "#1b004b",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#1b004b",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#1b004b99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#3d8b40",
+        "statusBarItem.remoteBackground": "#4caf50",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#4caf50",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#4caf5099",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#1b004b"
+    "peacock.color": "#4CAF50"
 }
