--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#6200e3",
-        "activityBar.background": "#6200e3",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#6200e3",
-        "statusBar.background": "#4c00b0",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#6200e3",
-        "statusBarItem.remoteBackground": "#4c00b0",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#4c00b0",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#4c00b099",
-        "titleBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#df6000",
-        "activityBarBadge.foreground": "#e7e7e7"
+        "activityBar.activeBackground": "#b197e1",
+        "activityBar.background": "#b197e1",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#b197e1",
+        "statusBar.background": "#946fd6",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#7647cb",
+        "statusBarItem.remoteBackground": "#946fd6",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#946fd6",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#946fd699",
+        "titleBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#f8ece6",
+        "activityBarBadge.foreground": "#15202b"
     },
-    "peacock.color": "#4c00b0"
+    "peacock.color": "#946FD6"
 }
