--- a/img-optimizadas/package.json
+++ b/img-optimizadas/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "bcrypt-nodejs": "^0.0.3",
     "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
